--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "alt": "0.16.10",
     "classnames": "^2.1.2",
+    "object-assign": "^3.0.0",
     "react": "0.13.3"
   },
   "devDependencies": {
