--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tree view UI",
   "main": "index.js",
   "scripts": {
-    "start": "watchify index.js -t babelify --outfile build/bundle.js",
+    "start": "watchify src/index.js -t babelify --outfile build/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
